change application.properties to application.properties